History:

<see Git checking messages for history>

4.0.0   201x/xx/xx
      - MSS: renamed MSSBase to MSSMixin in base.py
      - MSS: fix Flake8 C408: Unnecessary dict call - rewrite as a literal, in exceptions.py
      - MSS: fix Flake8 I100: Import statements are in the wrong order
      - MSS: fix Flake8 I201: Missing newline before sections or imports

3.3.2   2018/11/20
      - new contributors: hugovk, Andreas Buhr
      - MSS: do monitor detection in MSS constructor (fixes #79)
      - MSS: specify compliant Python versions for pip install
      - tests: enable Python 3.7
      - tests: fix test_entry_point() with multiple monitors

3.3.1   2018/09/22
      - Linux: fix a memory leak introduced with 7e8ae5703f0669f40532c2be917df4328bc3985e (fixes #72)
      - doc: add the download statistics badge

3.3.0   2018/09/04
      - Linux: add an error handler for the XServer to prevent interpreter crash (fix #61)
      - MSS: fix a ResourceWarning: unclosed file in setup.py
      - tests: fix a ResourceWarning: unclosed file
      - doc: fix a typo in Screenshot.pixel() method (thanks to @mchlnix)
      - big code clean-up using black

3.2.1   2018/05/21
      - new contributor: Ryan Fox
      - Windows: enable Hi-DPI awareness

3.2.0   2018/03/22
      - removed support for Python 3.4
      - MSS: add the Screenshot.bgra attribute
      - MSS: speed-up grabbing on the 3 platforms
      - tools: add PNG compression level control to to_png()
      - tests: add leaks.py and benchmarks.py for manual testing
      - doc: add an example about capturing part of the monitor 2
      - doc: add an example about computing BGRA values to RGB

3.1.2   2018/01/05
      - removed support for Python 3.3
      - MSS: possibility to get the whole PNG raw bytes
      - Windows: capture all visible windows
      - doc: improvements and fixes (fix #37)
      - CI: build the documentation

3.1.1   2017/11/27
      - MSS: add the 'mss' entry point

3.1.0   2017/11/16